src/test/resources/lox/error/result_map_error.lox

var result = Error("Error").mapError(fun (err) { return "My " + err.message; });

print result is Error; // expect: true
print result.ignoreOk(); // expect: My Error
